--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#data
+data/
+data/*
+
+#models
+models/
+models/*
+
+#sessions
+sessions/
+sessions/*
